overflow is no longer hidden

--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@ body {
     background:#0a0a0a;
     box-sizing:border-box;
     margin: 0;
-    overflow:hidden;
 }
 
 /* Create CSS grid */
